fix: mainText left wrap width

--- a/src/components/maintext/MainText.css
+++ b/src/components/maintext/MainText.css
@@ -33,11 +33,6 @@
     color: #221F1F;
 }
 
-.team-text-content{
-    width: 50%;
-   padding: 97px 47px 104px 356px; 
-
-}
 .team-bg{
   width: 50%;
 }
@@ -61,4 +56,15 @@
     font-size: 18px;
     padding-bottom: 40px;
     padding-top: 10px;
+}
+.team-text-content{
+    width: 45%;
+    display: flex;
+    justify-content: flex-end;
+}
+.mainTextWrap{
+    width:100% ;
+    max-width: 514px;
+    margin: 0 1em;
+    padding: 0 auto;
 }
